style changes (add code line numbers and fix notes page display on small screens)

--- a/client/app/styles/markdown.scss
+++ b/client/app/styles/markdown.scss
@@ -22,7 +22,29 @@
 
   pre {
     padding: 5px;
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
 }
 
+
+
+
+[data-line] {
+  display: inline;
+  // padding: 0 !important;
+  // margin: 0 !important;
+
+  // .line {
+
+  // }
+
+  &::before {
+    content: attr(data-line);
+    display: inline-block;
+    width: 1.5em;
+    color: rgba(0, 0, 0, 0.4);
+    border-right: 2px solid rgba(0, 0, 0, 0.1);
+    margin-right: 3px;
+  }
+}
